# pseudo3dengine

./: CMakeLists.txt  README.md  buildEXErelease.bat
release/: CMakeCache.txt  Release.rar
src/: console_draw_utils.cpp  console_draw_utils.hpp  main.cpp  mesh.cpp  mesh.hpp  resource_manager.cpp  resource_manager.hpp
src/3d/: mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp
src/Camera/: camera.cpp  camera.hpp
src/Map/: map.cpp  map.hpp
src/math/: include_all.hpp  mtrx.cpp  mtrx.hpp  mtrx2.cpp  mtrx4.cpp  mtrx4.hpp  vec2.cpp  vec2.hpp  vec4.cpp  vec4.hpp
